<resources>
    <string name="app_name">BullsCows</string>

    <!--MainFragment-->
    <string name="main_profile">Profile</string>
    <string name="main_company">Company</string>
    <string name="main_sandbox">Sandbox</string>
    <string name="main_shop">Shop</string>
    <string name="main_help">Help</string>
    <string name="main_settings">Settings</string>

    <!--PROFILE-->
    <string name="statistics">Statistics</string>
    <!--STATISTICS-->
    <string name="gold_earned">Gold earned:</string>
    <string name="gold_spent">Gold spent:</string>
    <string name="games_played">Games played:</string>
    <string name="wins">Wins:</string>
    <string name="average_time">The average time of the game:</string>
    <string name="shortest_game">The shortest game:</string>
    <string name="longest_game">The longest game:</string>
    <string name="average_number_offers">Average number of offers:</string>
    <string name="least_offers">Least of all offers:</string>
    <string name="most_offers">Most offers:</string>

    <!--GAME-->
    <string name="congratulations">Congratulations!</string>
    <string name="ok">ok</string>
    <string name="offer_count">Count elements of combination</string>
    <string name="numbers_dialog_label">Add offer</string>
    <string name="begin_game">Begin game</string>
    <string name="difficult_easy">Easy</string>
    <string name="difficult_medium">Medium</string>
    <string name="difficult_hard">Hard</string>
    <string name="combination_element_can_be">Combination element can be</string>
    <string name="offers_list_submessage_begin_game">The clock is ticking!</string>
    <string name="offers_list_submessage_empty">To start the game offer your first version</string>
    <string name="seconds">sec</string>

    <!--RESULTGAME-->
    <string name="offers_made">Offers made:</string>
    <string name="time_spend">Time spent:</string>

    <!--GAME_TYPES-->
    <string name="numbers_game_type">Numbers</string>
    <string name="word_game_type">Word</string>
    <string name="error_game_type">Error game type</string>
    <string name="much">much</string>
    <string name="attempts_left">Attempts left:</string>
    <string name="time_is_over">Time is over</string>
</resources>