<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:id="@+id/main_profile"
        android:text="@string/main_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main_company"
        android:text="@string/main_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main_sandbox"
        android:text="@string/main_sandbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main_shop"
        android:text="@string/main_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/main_help"
        android:text="@string/main_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>