<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
<RelativeLayout
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/difficult_easy_cardview"
        app:cardBackgroundColor="@color/green"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/difficult_easy"
            style="@style/DifficultText"/>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/difficult_easy"
        android:textColor="@color/green"
        android:text="@string/difficult_easy"
        style="@style/DifficultButton"/>
</RelativeLayout>
<RelativeLayout
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/difficult_medium_cardview"
        app:cardBackgroundColor="@color/orange"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/difficult_medium"
            style="@style/DifficultText"/>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/difficult_medium"
        android:textColor="@color/orange"
        android:text="@string/difficult_medium"
        style="@style/DifficultButton"/>
</RelativeLayout>
<RelativeLayout
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/difficult_hard_cardview"
        app:cardBackgroundColor="@color/red"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/difficult_hard"
            style="@style/DifficultText"/>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/difficult_hard"
        android:textColor="@color/red"
        android:text="@string/difficult_hard"
        style="@style/DifficultButton"/>
</RelativeLayout>
</LinearLayout>