<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp">
                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/congratulations"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offers_made"
                        android:textColor="@color/black"
                        android:textSize="14dp"/>

                    <TextView
                        android:id="@+id/amount_offers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="123"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_spend"
                        android:textColor="@color/black"
                        android:textSize="14dp"/>

                    <TextView
                        android:id="@+id/time_spend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="123"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_gravity="right"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="52dp">
                <Button
                    android:id="@+id/add_offer"
                    android:textColor="@color/purple"
                    android:text="ok"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.Light"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>