<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/purple"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/congratulations"/>
            <LinearLayout
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/offers_made"
                            android:textColor="@color/black"
                            android:textSize="14dp"/>
                        <TextView
                            android:id="@+id/amount_offers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_spend"
                            android:textColor="@color/black"
                            android:textSize="14dp"/>
                        <LinearLayout
                            android:gravity="bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:src="@drawable/clock_green"
                                android:adjustViewBounds="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:layout_marginBottom="-2dp"
                                android:id="@+id/time_spend"
                                android:layout_marginLeft="6dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1234"
                                android:textColor="@color/green"
                                android:textSize="16dp"
                                android:textStyle="bold"/>
                            <TextView
                                android:layout_marginBottom="-2dp"
                                android:textSize="12dp"
                                android:textColor="@color/black"
                                android:text="@string/seconds"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gold_earned"
                        android:textColor="@color/black"
                        android:textSize="14dp"/>
                    <LinearLayout
                        android:gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/coins"
                            android:adjustViewBounds="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/gold_earned"
                            android:layout_marginLeft="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:textColor="@color/orange"
                            android:textSize="16dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0px"/>
            </LinearLayout>
            <FrameLayout
                android:layout_gravity="right"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="52dp">
                <Button
                    android:id="@+id/result_ok"
                    android:layout_gravity="right"
                    android:textColor="@color/purple"
                    android:text="ok"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:theme="@style/Theme.AppCompat.Light"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </FrameLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>